# cv-detection-service

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: start_api.py
src/api/: main.py
src/api/v1/: detections.py
src/api/v1/schemas/: detections.py
src/services/detector/: detector_impl.py  detector_service.py
